# mini-nt-os

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
boot-info/: Cargo.toml
boot-info/src/: lib.rs
bootloader/: Cargo.toml
bootloader/src/: loader.rs  main.rs  memory.rs  paging.rs
bump-alloc/: Cargo.toml
bump-alloc/src/: lib.rs
directx/d3d8/: Cargo.toml
directx/d3d8/src/: lib.rs
directx/d3d9/: Cargo.toml
directx/d3d9/src/: lib.rs
directx/dinput8/: Cargo.toml
directx/dinput8/src/: lib.rs
directx/dsound/: Cargo.toml
directx/dsound/src/: lib.rs
docs/: ARCHITECTURE.md  mino-nt-expert-skill.skill  spec.md  tasks.md
docs/references/: phil-opp-writing-an-os-in-rust.md
executive/io/: Cargo.toml
executive/io/src/: driver.rs  fat.rs  file.rs  irp.rs  lib.rs
executive/ke/: Cargo.toml
executive/ke/src/: apc.rs  dpc.rs  event.rs  lib.rs  scheduler.rs  thread.rs
executive/mm/: Cargo.toml
executive/mm/src/: buddy.rs  lib.rs  paging.rs  vad.rs  virtual_alloc.rs
executive/ob/: Cargo.toml
executive/ob/src/: handle.rs  lib.rs  namespace.rs  object.rs
executive/ps/: Cargo.toml
executive/ps/src/: eprocess.rs  ethread.rs  lib.rs  loader.rs  peb.rs  teb.rs
hal/: Cargo.toml
hal/src/: ata.rs  fb.rs  gdt.rs  idt.rs  irql.rs  lib.rs  msr.rs  ps2.rs  ring3.rs  serial.rs  sysenter.rs  timer.rs
kernel/: Cargo.toml  build.rs  kernel.ld
kernel/src/: launcher.rs  main.rs  syscall.rs
tools/: qemu-run.ps1  qemu-run.sh  run-qemu.ps1  vbox-pack.ps1  vbox-run.ps1
tools/mkfat/: Cargo.toml
tools/mkfat/src/: main.rs
tools/pe-loader/: Cargo.toml
tools/pe-loader/src/: main.rs
win32/kernel32/: Cargo.toml
win32/kernel32/src/: lib.rs
win32/msvcrt/: Cargo.toml
win32/msvcrt/src/: lib.rs
win32/user32/: Cargo.toml
win32/user32/src/: lib.rs
win32/winmm/: Cargo.toml
win32/winmm/src/: lib.rs
